fixing alignment

--- a/src/components/course/Course.css
+++ b/src/components/course/Course.css
@@ -89,7 +89,7 @@ margin-top: -0.2rem;
     }
 
     .course-card-content{
-        width: 68vw;
+        width: 65vw;
     }
 
     .div-two{
